Closed
Bug 93521
Opened 24 years ago
Closed 24 years ago
Active selections are sometimes grayed out (blurred)
Categories
(Core Graveyard :: Embedding: APIs, defect, P1)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla0.9.4
People
(Reporter: runyonkj, Assigned: saari)
Details
(Keywords: topembed, Whiteboard: verified-on-trunk, topembed+)
Attachments
(3 files)
|
732 bytes,
patch
|
Details | Diff | Splinter Review | |
|
1.99 KB,
patch
|
Details | Diff | Splinter Review | |
|
1.35 KB,
patch
|
Details | Diff | Splinter Review |
Steps to reproduce:
1) Run mfcembed.exe.
2) Click and drag on some text to make a selection. The selected text appears
with a solid blue highlight on Windows.
3) Press left mouse button down while on a link.
4) While holding down mouse button, drag cursor off of link.
5) Release mouse button (so the link is given tab focus, but not clicked
through).
6) Now, make a new text selection.
Expected results: the new selection should be given the same highlight as the
initial selection (solid blue on Windows with default system colors).
Actual results: any new selections made from this point on are gray, indicating
that a blur event has occured.
What's more, if you hit "tab" then the gray selection becomes solid blue. But,
any new selections you make will still be gray.
| Assignee | ||
Comment 2•24 years ago
|
||
| Assignee | ||
Updated•24 years ago
|
Priority: -- → P1
| Assignee | ||
Comment 3•24 years ago
|
||
hyatt, bryner, want to review this?
Comment 4•24 years ago
|
||
r=bryner (but I'd like to know why this only happens in the aborted
drag-and-drop case)
Comment 5•24 years ago
|
||
It happens in plenty of other cases. For example, go to bugzilla.mozilla.org,
focus the Submit button, and then select text.
Comment 6•24 years ago
|
||
saari--you'll remove the tabs before you checkin, right? ;-)
| Assignee | ||
Comment 7•24 years ago
|
||
Yeah I'll kill the tabs (gotta go fix that environment), I actually blew away
that tree already :-)
Comment 8•24 years ago
|
||
sr=hyatt
| Assignee | ||
Comment 9•24 years ago
|
||
Fix checked in on trunk. Baking for the branch.
| Assignee | ||
Comment 10•24 years ago
|
||
fixed-on-trunk status whiteboard update
Whiteboard: fixed-on-trunk
This seems to have caused regression bug 94823.
| Assignee | ||
Comment 12•24 years ago
|
||
Comment 13•24 years ago
|
||
saari, please resolve bugs as Fixed when the fix lands on the trunk. We are not
going to leave bugs open for future branch landings. Thanks.
Comment 14•24 years ago
|
||
Please remove the commented out lines you added in nsDocumentViewer, also it
would be good to fix the indentation on the SetContentState() line in ESM if
you're removing the |if|.
I'll give this a go on linux.
Comment 15•24 years ago
|
||
I couldn't find any obvious problems with this... (which doesn't mean something
won't come up later). r=bryner (with my previous comments).
| Assignee | ||
Comment 16•24 years ago
|
||
Comment 17•24 years ago
|
||
sr=hyatt
| Assignee | ||
Comment 18•24 years ago
|
||
New patch checked in on trunk. Let's try this again.
Comment 19•24 years ago
|
||
mdunn@netscape.com, has it beeen verified on the trunk? If yes, please change
the status whiteboard to verified-on-trunk and let's land on the 0.9.2 branch.
Comment 20•24 years ago
|
||
Tested. Works as expected with 08-15-01 MFCEmbed from trunk
Whiteboard: fixed-on-trunk → verified-on-trunk
| Reporter | ||
Comment 21•24 years ago
|
||
looks good to me too.
Comment 22•24 years ago
|
||
need this on the branch
Whiteboard: verified-on-trunk → verified-on-trunk, topembed+
| Assignee | ||
Comment 23•24 years ago
|
||
fix checked into branch
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 24•24 years ago
|
||
still seeing this in an 8/17 nightly.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Updated•24 years ago
|
QA Contact: mdunn → bmartin
| Assignee | ||
Comment 25•24 years ago
|
||
Yeah, I screwed up and I suck. I just fixed it on the trunk. Branch when I get
a build. Bah.
| Assignee | ||
Comment 26•24 years ago
|
||
okay, it was fine on the branch, I just screwed up the trunk. all better
Status: REOPENED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•