Fix for bug 93521, selections are sometimes grayed out. r=bryner, sr=hyatt